# MS2LDA

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MS2LDA_dependancies.yml  MS2LDA_environment.yml  MS2LDA_workflow.py  PLANS.md  QUICK_START.md  README.md  README_CLI.md  README_CONDA.md  README_POETRY.md  README_VIZ.md  example_config.json  pyproject.toml  run_analysis.bat  run_analysis.sh  run_app.bat  run_app.sh  setup.py  test_datatable.tsv
.github/workflows/: docs.yml  python-package-poetry.yml.disabled  release-to-pypi.yml.disabled
Add_On/Fingerprints/: FP_annotation.py
Add_On/MassQL/: MassQL_annotation.py
Add_On/NTS/: Screening.py
Add_On/Spec2Vec/: annotation.py  annotation_refined.py  retrain_Spec2Vec.ipynb
App/: app.py  app_instance.py  callbacks.py  callbacks_original.py  layout.py  layout_original.py
App/callbacks/: __init__.py  common.py  network.py  rankings_details.py  run_and_load.py  screening.py
App/layout/: __init__.py  load_results.py  motif_details.py  motif_rankings.py  motif_search.py  network_view.py  run_analysis.py  spectra_search.py
MS2LDA/: FP_annotation.py  Frag_and_loss_importance.py  MS2Query_annotation.py  Mass2Motif.py  Mass2MotifDocument.py  Spec2Vec_annotation.py  Substructure_retrieval.py  __init__.py  add_classifire_classifications.py  modeling.py  motif_parser.py  run.py  running.py  utils.py
MS2LDA/Add_On/: __init__.py
MS2LDA/FP_calculation/: cdk_fps.py  jmap_fps.py  map4.py  minhash_fps.py
MS2LDA/MotifDB/: MotifDB_MS1.feather  MotifDB_MS2.feather  Motifset Euphorbia Plant Mass2Motifs.json  Motifset GNPS library derived Mass2Motifs.json  Motifset LDB MotifDB POS.json  Motifset LDB_NEG_MotifDB_01.json  Motifset LDB_NEG_MotifDB_02.json  Motifset MIADB_pos_100.json  Motifset MIADB_pos_60.json  Motifset MIADB_pos_indole.json  Motifset Massbank library derived Mass2Motifs.json  Motifset Photorhabdus and Xenorhabdus Mass2Motifs.json  Motifset Planomonospora-associated Mass2Motifs.json  Motifset Rhamnaceae Plant Mass2Motifs.json  Motifset Streptomyces S29.json  Motifset Streptomyces and Salinispora Mass2Motifs.json  Motifset Urine derived Mass2Motifs.json  motifDB.json
MS2LDA/Preprocessing/: generate_corpus.py  load_and_clean.py
MS2LDA/Visualisation/: MS2LDA_visualisation.py  __init__.py  ldadict.py  plot_MotifsetSimilarity.py  visualisation.py
MS2LDA/fingerprints/: MACCS.py  klekota_roth.py
MotifDB/Euphorbia Plant Mass2Motifs/: euphorbia_motif_0.m2m  euphorbia_motif_119.m2m  euphorbia_motif_126.m2m  euphorbia_motif_132.m2m  euphorbia_motif_14.m2m  euphorbia_motif_149.m2m  euphorbia_motif_158.m2m  euphorbia_motif_162.m2m  euphorbia_motif_173.m2m  euphorbia_motif_179.m2m  euphorbia_motif_18.m2m  euphorbia_motif_180.m2m  euphorbia_motif_182.m2m  euphorbia_motif_192.m2m  euphorbia_motif_199.m2m  euphorbia_motif_2.m2m  euphorbia_motif_207.m2m  euphorbia_motif_214.m2m  euphorbia_motif_254.m2m  euphorbia_motif_255.m2m  euphorbia_motif_260.m2m  euphorbia_motif_277.m2m  euphorbia_motif_296.m2m  euphorbia_motif_297.m2m  euphorbia_motif_299.m2m  euphorbia_motif_3.m2m  euphorbia_motif_308.m2m  euphorbia_motif_322.m2m  euphorbia_motif_328.m2m  euphorbia_motif_333.m2m  euphorbia_motif_335.m2m  euphorbia_motif_341.m2m  euphorbia_motif_345.m2m  euphorbia_motif_350.m2m  euphorbia_motif_360.m2m  euphorbia_motif_362.m2m  euphorbia_motif_375.m2m  euphorbia_motif_376.m2m  euphorbia_motif_377.m2m  euphorbia_motif_400.m2m  (+15 more)
MotifDB/GNPS library derived Mass2Motifs/: gnps_motif_0.m2m  gnps_motif_1.m2m  gnps_motif_10.m2m  gnps_motif_11.m2m  gnps_motif_12.m2m  gnps_motif_13.m2m  gnps_motif_14.m2m  gnps_motif_15.m2m  gnps_motif_16.m2m  gnps_motif_170.m2m  gnps_motif_18.m2m  gnps_motif_19.m2m  gnps_motif_2.m2m  gnps_motif_21.m2m  gnps_motif_22.m2m  gnps_motif_23.m2m  gnps_motif_26.m2m  gnps_motif_28.m2m  gnps_motif_29.m2m  gnps_motif_3.m2m  gnps_motif_30.m2m  gnps_motif_31.m2m  gnps_motif_32.m2m  gnps_motif_34.m2m  gnps_motif_367.m2m  gnps_motif_37.m2m  gnps_motif_38.m2m  gnps_motif_39.m2m  gnps_motif_4.m2m  gnps_motif_40.m2m  gnps_motif_41.m2m  gnps_motif_43.m2m  gnps_motif_44.m2m  (+29 more)
Preprocessing/: generate_corpus.py  load_and_clean.py
Visualisation/: MS2LDA_visualisation.py  plot_MotifsetSimilarity.py  visualisation.py
datasets/: desktop.ini
docs/: conf.py  index.md  masking.md  mkdocs.yml  motifs.md  parameter_settings.md  requirements.txt
documentation/: index.md
massql4motifs/: README.included.md  README.vendored.md  msql_cmd.py  msql_engine.py  msql_engine_filters.py
models/: embeddings_smiles_spectra_DB.pickle  spec2vec_AllPositive_ratio05_filtered_201101_iter_15.model  spec2vec_AllPositive_ratio05_filtered_201101_iter_15.model.trainables.syn1neg.npy  spec2vec_AllPositive_ratio05_filtered_201101_iter_15.model.wv.vectors.npy
ms2lda/: Mass2Motif.py  Mass2MotifDocument.py  modeling.py  motif_parser.py  run.py  utils.py
notebooks/: DataAnalysis_ACHE_pos.ipynb  DataAnalysis_GNPS-NIH-NATURALPRODUCTSLIBRARY_POSITIVE.ipynb  Demo_MS2LDA.ipynb  DreamBook.ipynb  MS2Deepscore_MVS_A.ipynb  MS2LDA_MassQL-Copy1.ipynb  MS2LDA_MassQL.ipynb  MS2LDA_Shipei_dataset.ipynb  MS2LDA_complete-Copy2.ipynb  MS2LDA_complete-Copy3.ipynb  MS2LDA_complete.ipynb  MS2LDA_fingerprints.ipynb  MS2LDA_optimization.ipynb  MS2LDA_spec2vec.ipynb  MS2LDA_spec2vec_Fingerprints.ipynb  MS2LDA_spec2vec_SHAP.ipynb  MS2LDA_tutorial.html  MS2LDA_tutorial.ipynb  Mass2Motif_checkUp.ipynb  New_complete.ipynb  Pos_ACHE_Inhibitors_dataset.ipynb  RF_tox21.ipynb  Run_DataBase.ipynb  Run_Template.ipynb  Run_Vis.ipynb  Run_Vis_Network.ipynb  create_library.ipynb  shap_for_motifs.ipynb  test.db
plan/: PLANS.md  dash-app-refactoring-plan.md
scripts/: FP_Motif_evaluation.py  MAGMa_annotation.py  MS2LDA_core.py  MassQL_annotation.py  ms2lda_runfull.py
test_data/: pos_ache_inhibitors_pesticides.mgf
tests/: conftest.py  test_annotation.py  test_callbacks.py  test_generate_corpus.py  test_integration.py  test_load_and_clean.py  test_massql.py  test_modeling.py  test_motif_parser.py  test_runfull.py  test_utils.py
(+2557 files in other folders)
